# delhi-scheme-saathi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  design.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  sam-template.yaml
data/: README.md  all_documents.json  all_offices.json  all_rejection_rules.json  all_schemes.json  delhi_arogya_kosh.json  elsd.json  life_events_taxonomy.json  pmay_u_2.0.json  rgsry.json  widow_pension.json
docs/: API.md  ARCHITECTURE.md  AWS_DEPLOYMENT_BRIEF.md  AWS_OPERATOR_HANDOFF.md  QUICKSTART.md  WHAT_THIS_BOT_CAN_DO.md
docs/plans/: 2026-03-08-hindi-localization-dak-followups.md  2026-03-08-language-normalization-voice-application-fixes.md  2026-03-08-rgsry-followup-routing-and-scheme-matrix.md  2026-03-08-telegram-help-language-commands.md
scripts/: container_start.py  demo_scenarios.py  ensure_seed_data.py  generate_embeddings.py  rapid_redeploy.sh  seed_data.py  seed_local_db.sh  set_telegram_webhook.py  test_conversation_flow.py  test_voice_integration.py  verify_scheme_rows.py
src/: __init__.py  config.py  lambda_handler.py  main.py  memory_worker_handler.py
tests/: conftest.py  test_ai_orchestration.py  test_bhashini.py  test_conversation_regressions.py  test_ensure_seed_data.py  test_fallback_clients.py  test_fsm.py  test_logging_config.py  test_main.py  test_memory_worker_handler.py  test_models.py  test_profile_extractor.py  test_sarvam.py  test_scheme_matcher.py  test_scheme_relevance.py  test_seed_data.py  test_telegram_client.py  test_webhook.py
(+47 files in other folders)
